WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197942
Horizontal scrollbar flashes after scrolling vertically with keyboard
https://bugs.webkit.org/show_bug.cgi?id=197942
Summary
Horizontal scrollbar flashes after scrolling vertically with keyboard
Tim Horton
Reported
2019-05-16 01:17:36 PDT
Horizontal scrollbar flashes after scrolling vertically with keyboard
Attachments
Patch
(3.48 KB, patch)
2019-05-16 01:18 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews211 for win-future
(13.62 MB, application/zip)
2019-05-16 05:18 PDT
,
EWS Watchlist
no flags
Details
Patch
(3.89 KB, patch)
2019-05-16 18:25 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(3.90 KB, patch)
2019-05-28 16:20 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-05-16 01:18:47 PDT
Created
attachment 370029
[details]
Patch
Tim Horton
Comment 2
2019-05-16 01:19:13 PDT
<
rdar://problem/46169578
>
EWS Watchlist
Comment 3
2019-05-16 05:18:12 PDT
Comment on
attachment 370029
[details]
Patch
Attachment 370029
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/12205879
New failing tests: fast/shadow-dom/svg-text-path-href-change-in-shadow-tree.html js/dom/try-catch-crash.html svg/text/textpath-reference-update.html fast/shadow-dom/svg-use-href-change-in-shadow-tree.html js/dom/custom-constructors.html
EWS Watchlist
Comment 4
2019-05-16 05:18:18 PDT
Created
attachment 370038
[details]
Archive of layout-test-results from ews211 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews211 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Tim Horton
Comment 5
2019-05-16 18:25:53 PDT
Created
attachment 370098
[details]
Patch
Brent Fulgham
Comment 6
2019-05-28 14:27:57 PDT
iOS Build failure: WKKeyboardScrollingAnimator.mm:592:15: error: unused function 'axesForDelta' [-Werror,-Wunused-function]
Brent Fulgham
Comment 7
2019-05-28 14:29:07 PDT
Comment on
attachment 370098
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=370098&action=review
> Source/WebKit/UIProcess/ios/WKKeyboardScrollingAnimator.mm:-592 > -- (void)scrollToContentOffset:(WebCore::FloatPoint)contentOffsetDelta animated:(BOOL)animated
#if HAVE(UI_SCROLL_VIEW_INDICATOR_FLASHING_SPI) ?
Tim Horton
Comment 8
2019-05-28 16:20:01 PDT
Created
attachment 370800
[details]
Patch
Dean Jackson
Comment 9
2019-05-28 16:22:39 PDT
Comment on
attachment 370800
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=370800&action=review
> Source/WebKit/Platform/spi/ios/UIKitSPI.h:354 > +- (void)_flashScrollIndicatorsForAxes:(UIAxis)axes persistingPreviousFlashes:(BOOL)persisting;
Wow.
https://www.quora.com/What-is-the-plural-form-of-axis-1
WebKit Commit Bot
Comment 10
2019-05-28 16:57:33 PDT
Comment on
attachment 370800
[details]
Patch Clearing flags on attachment: 370800 Committed
r245832
: <
https://trac.webkit.org/changeset/245832
>
WebKit Commit Bot
Comment 11
2019-05-28 16:57:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug