Horizontal scrollbar flashes after scrolling vertically with keyboard https://bugs.webkit.org/show_bug.cgi?id=197942 <rdar://problem/46169578>

Reviewed by Dean Jackson.

* UIProcess/ios/WKKeyboardScrollingAnimator.mm:
(axesForDelta):
(-[WKKeyboardScrollViewAnimator scrollToContentOffset:animated:]):
Only flash relevant axes.

* Platform/spi/ios/UIKitSPI.h:


Canonical link: https://commits.webkit.org/212346@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245832 268f45cc-cd09-0410-ab3c-d52691b4dbfc