Source/WebKit/UIProcess/ios/WKKeyboardScrollingAnimator.mm
@@ -589,16 +589,28 @@ static WebCore::FloatPoint farthestPointInDirection(WebCore::FloatPoint a, WebCo
     return [_delegate keyboardScrollViewAnimator:self distanceForIncrement:increment inDirection:direction];
 }
 
-- (void)scrollToContentOffset:(WebCore::FloatPoint)contentOffsetDelta animated:(BOOL)animated
+#if HAVE(UI_SCROLL_VIEW_INDICATOR_FLASHING_SPI)
+static UIAxis axesForDelta(WebCore::FloatSize delta)
+{
+    UIAxis axes = UIAxisNeither;
+    if (delta.width())
+        axes = static_cast<UIAxis>(axes | UIAxisHorizontal);
+    if (delta.height())
+        axes = static_cast<UIAxis>(axes | UIAxisVertical);
+    return axes;
+}
+#endif
+
+- (void)scrollToContentOffset:(WebCore::FloatPoint)contentOffset animated:(BOOL)animated
 {
     auto scrollView = _scrollView.getAutoreleased();
     if (!scrollView)
         return;
     if (_delegateRespondsToWillScroll)
         [_delegate keyboardScrollViewAnimatorWillScroll:self];
-    [scrollView setContentOffset:contentOffsetDelta animated:animated];
+    [scrollView setContentOffset:contentOffset animated:animated];
 #if HAVE(UI_SCROLL_VIEW_INDICATOR_FLASHING_SPI)
-    [scrollView _flashScrollIndicatorsPersistingPreviousFlashes];
+    [scrollView _flashScrollIndicatorsForAxes:axesForDelta(WebCore::FloatPoint(scrollView.contentOffset) - contentOffset) persistingPreviousFlashes:YES];
 #else
     [scrollView _flashScrollIndicatorsPersistingPreviousFlashes:YES];
 #endif
